# cc

./: .gitignore  README.md  pyproject.toml  requirements.txt
backendapi/: admin.py  models.py  urls.py  views.py
backendapi/migrations/: 0001_initial.py  0002_auto_20200303_1244.py  0002_auto_20200307_2213.py  0003_auto_20200303_1251.py  0003_auto_20200307_2214.py  0004_auto_20200309_2146.py  0005_folder_owner.py  0006_auto_20200311_2201.py  0007_auto_20200315_1924.py
cc/: settings.py  urls.py
cc/static/cc/css/: theme.min.css
cc/static/cc/js/: theme.min.js  underscore.min.js
drawandlist/: apps.py  views.py
drawandlist/static/drawandlist/: styles.css  tabs.js
drawandlist/templates/drawandlist/: main.html
frontendjs/: urls.py  views.py
templates/: 404.html  500.html  base_generic.html  base_with_menu.html  footer.html
templates/backendapi/: projects.html
templates/frontendjs/: projects.html
templates/registration/: login.html  password_reset_form.html
