[tool.poetry]
name = "cc"
version = "0.1.0"
description = "The official Constructive Concept repository"
authors = ["gdubus <gdubus@norauto.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
